2006-05-30  Brian Warner  <warner@lothar.com>

	* buildbot/process/step_twisted.py (Trial): set the step name, so it
	shows up properly in status displays

2006-05-28  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_properties.py (Run.testInterpolate): on the
	build we use to verify that WithProperties works:

	** set flunkOnFailure=True so that build failures get noticed
	** set workdir='.' so that the build succeeds, otherwise it is trying
	    to touch 'build/something', and 'build/' doesn't exist because
	    usually that's created by a Source step
	** set timeout=10, because Twisted-1.3.0 has a race condition that
	    this test somehow triggers, in which the 'touch' process becomes
	    a zombie and we wait for th etimeout before giving up on it.

	* buildbot/test/runutils.py (RunMixin.logBuildResults): utility method
	to log the Build results and step logs to the twisted log.
	(RunMixin.failUnlessBuildSucceeded): use logBuildResults to record
	what went wrong if a build was expected to succeed but didn't.

	* buildbot/process/step_twisted.py (Trial): set the default
	trialMode to '--reporter=bwverbose', which specifies verbose
	black-and-white text. Back in twisted-1.3/2.0 days we had to use
	'-to', but those are completely missing in modern Twisteds.

	* buildbot/scripts/sample.cfg: make the sample Manhole config use
	a localhost-only port, to encourage better security

	* docs/buildbot.texinfo (Change Sources): mention
	darcs_buildbot.py

	* .darcs-boring: add a Darcs boringfile

	* README (REQUIREMENTS): stop claiming compatibility with
	Twisted-1.3.0

	* contrib/darcs_buildbot.py: write a darcs-commit-hook change
	sender

2006-05-27  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py: bump to 0.7.3+ while between releases
	* docs/buildbot.texinfo: same

2006-05-23  Brian Warner  <warner@lothar.com>

	* buildbot/__init__.py (version): Releasing buildbot-0.7.3
	* docs/buildbot.texinfo: set version to match
	* NEWS: update for 0.7.3
